force-app/main/default/objects/NPN_Community_Competency_Data_Link__c/NPN_Community_Competency_Data_Link__c.object-meta.xml
<CustomObject>
    <description>NPN : Home Page : NPN Community Home Page Competency Data Link (child object of Competency Data)</description>
    <label>NPN Community Competency Data Link</label>
    <nameField>
        <displayFormat>CDL-{0000}</displayFormat>
        <label>Competency Data Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Community Competency Data Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>