force-app/main/default/objects/NPN_Community_Competency_Data_Link__c/fields/Competency_Data__c.field-meta.xml
<CustomField>
    <fullName>Competency_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competency Data</label>
    <referenceTo>Competency_Data__c</referenceTo>
    <relationshipName>Competency_Data_Links</relationshipName>
    <type>Lookup</type>
</CustomField>