force-app/main/default/objects/NPN_Community_Competency_Data_Link__c/fields/Default_Competency__c.field-meta.xml
<CustomField>
    <fullName>Default_Competency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Competency</label>
    <type>Checkbox</type>
</CustomField>