force-app/main/default/objects/NPN_Community_Competency_Data_Link__c/fields/Link_Url_Text__c.field-meta.xml
<CustomField>
    <fullName>Link_Url_Text__c</fullName>
    <label>Link Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>