force-app/main/default/objects/NPN_Community_Competency_Data_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Competency_Data__c</columns>
    <columns>NAME</columns>
    <columns>Link_Label__c</columns>
    <columns>Link_Url_Text__c</columns>
    <columns>Default_Competency__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>